fix gap relative unit
having space somehow the reason why the rem doesnt work

--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,62 @@ main {
     display: grid;
     grid-template-columns: repeat(4, 1fr) ;
     grid-template-rows: repeat(2, 1fr);
-    gap: 1.5 rem;
+    gap: 1.5rem;
     grid-template-areas: 
     "first first second fifth"
     "third fourth fourth fifth";
 }
+
+.first, .second, .third, .fourth, .fifth {
+    background: white;
+    padding: 2rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+    position: relative;
+    overflow: hidden;
+  }
+/* Grid positioning */
+.first {
+    grid-area: first;
+    background: hsl(263, 55%, 52%);
+    color: white;
+  }
+  
+  .first::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 1.5rem;
+    width: 104px;
+    height: 102px;
+    background-image: url("data:image/svg+xml,%3Csvg width='104' height='102' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M104 102V59.727H84.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C95.01 25.86 98.909 22.257 104 19.375V0c-9.758 4.27-17.712 9.874-23.864 16.813-6.151 6.939-10.712 14.545-13.681 22.818C63.485 47.904 62 59.941 62 75.74V102h42zm-62 0V59.727H22.114c0-5.871.689-11.182 2.068-15.933 1.379-4.75 3.42-9.287 6.125-13.61C33.01 25.86 36.909 22.257 42 19.375V0c-9.758 4.27-17.712 9.874-23.864 16.813C12.085 23.752 7.523 31.358 4.554 39.631 1.485 47.904 0 59.941 0 75.74V102h42z' fill='%239775fa' fill-rule='nonzero' opacity='.4'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    z-index: 1;
+  }
+  
+  .second {
+    grid-area: second;
+    background: hsl(217, 19%, 35%);
+    color: white;
+  }
+  
+  .third {
+    grid-area: third;
+    background: white;
+    color: hsl(219, 29%, 14%);
+  }
+  
+  .fourth {
+    grid-area: fourth;
+    background: hsl(219, 29%, 14%);
+    color: white;
+  }
+  
+  .fifth {
+    grid-area: fifth;
+    background: white;
+    color: hsl(219, 29%, 14%);
+  }
 
 
     .attribution { font-size: 11px; text-align: center; }
